syntax = "proto3";

package auth;

option go_package = "awesomeProject1/services/grpc_auth/proto;proto";


service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc ListUsers (EmptyRequest) returns (ListUsersResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string id = 1;
}

message EmptyRequest {}

message ListUsersResponse{
  repeated User users =1;
}

// User model in gRPC format
message User {
  string id = 1;
  string name = 2;
  string email = 3;
}
